infra/excalidraw/manifests/deployment-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: excalidraw-client
  namespace: excalidraw
spec:
  replicas: 1
  selector:
    matchLabels:
      app: excalidraw-client
  template:
    metadata:
      labels:
        app: excalidraw-client
    spec:
      containers:
        - name: excalidraw-client
          image: kiliandeca/excalidraw:latest
          ports:
            - containerPort: 80
