infra/excalidraw/manifests/deployment-storage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: excalidraw-storage
  namespace: excalidraw
spec:
  replicas: 1
  selector:
    matchLabels:
      app: excalidraw-storage
  template:
    metadata:
      labels:
        app: excalidraw-storage
    spec:
      containers:
        - name: excalidraw-storage
          image: kiliandeca/excalidraw-storage-backend:latest
          ports:
            - containerPort: 8081
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: excalidraw-storage
