infra/excalidraw/manifests/service-client.yaml
apiVersion: v1
kind: Service
metadata:
  name: excalidraw-client
  namespace: excalidraw
spec:
  selector:
    app: excalidraw-client
  ports:
    - port: 80
      targetPort: 80
